--- a/index.html
+++ b/index.html
@@ -15,8 +15,34 @@
 
         <section id="habit-tracker" class="card">
             <h2>Habit Tracker</h2>
-            <div id="habit-tracker-container"> 
-                * habit tracking will be done here *
+            <div id="habit-tracker-container">
+                <div id="progress">Progress:</div>
+                <div id="habits">
+                    <ul>
+                        <li>
+                            <label for="habit1"><input type="checkbox" id="habit1"><li>Read a chapter of the bible.</li>
+                            </label>
+                        </li>
+                        
+
+                        <label for="habit2">
+                            <input type="checkbox" id="habit2"><li>Drink 80 ounces of water.</li>
+                        </label>
+
+                        <label for="habit3">
+                            <input type="checkbox" id="habit3"><li>Do something fun.</li>
+                        </label>
+
+                        <label for="habit4">
+                            <input type="checkbox" id="habit4"><li>Meet daily step goal.</li>
+                        </label>
+
+                        <label for="habit5">
+                            <input type="checkbox" id="habit5"><li>Have a good nights sleep.</li>
+                        </label>
+
+                    </ul>
+                </div>
             </div>
         </section>
 
